--- a/WS_Service_Contract.cls
+++ b/WS_Service_Contract.cls
@@ -1056,12 +1056,12 @@ global class WS_Service_Contract{
                                 System.debug('\n Log : desc :  SL to be updated Results '+slresuts);
                                 /*if(slresuts != null && slresuts.size()>0)
                                 {
-                                    response.ServiceLineResults.addAll(slresuts) ;                                
+                                    response.ServiceLineResults.addAll(slresuts) ;                              
                                 }*/
 								 //Contract Products Process Starts
                                 Set<id> ipobjidset = new Set<id>();
                                 Set<String> ipobjgidset = new Set<String>();
-                                List<SVMXC__Service_Contract_Products__c> existingCpList = [select id,SVMXC__Start_Date__c, SVMXC__End_Date__c ,BackOfficeReference__c, SVMXC__Installed_Product__c,SVMXC__Installed_Product__r.GoldenAssetId__c,SVMXC__Service_Contract__c from SVMXC__Service_Contract_Products__c where SVMXC__Service_Contract__c in : updateslidset ];
+                                List<SVMXC__Service_Contract_Products__c> existingCpList = [select id,SVMXC__Start_Date__c, SVMXC__End_Date__c ,BackOfficeReference__c, SVMXC__Installed_Product__c,SVMXC__Installed_Product__r.GoldenAssetId__c,SVMXC__Service_Contract__c,SVMXC__Product__c,ShippedSerialNumber__c from SVMXC__Service_Contract_Products__c where SVMXC__Service_Contract__c in : updateslidset ];
                                 Map<id,List<SVMXC__Service_Contract_Products__c>> slidListCPMap = new Map<id,List<SVMXC__Service_Contract_Products__c>>();//existing covered products
                                 System.debug('\n Clog:'+existingCpList.size());
                                 if(existingCpList!= null && existingCpList.size()>0)
@@ -1146,7 +1146,9 @@ global class WS_Service_Contract{
                                         if(cpObject!= null)
                                         {                                       
                                             cpObject.SVMXC__Start_Date__c = cpunit.InstalledProductStartDate;
-                                            cpObject.SVMXC__End_Date__c = cpunit.InstalledProductEndDate;                                           
+                                            cpObject.SVMXC__End_Date__c = cpunit.InstalledProductEndDate;    
+											cpObject.ShippedSerialNumber__c = cpunit.shippedSerialNumber;
+                                            cpObject.SVMXC__Product__c = cpunit.productbFOID;   											
                                             toupdate.add(cpObject);
                                         }
                                         else{
@@ -1498,7 +1500,7 @@ global class WS_Service_Contract{
 
                     
                     for(SVMXC__Service_Contract_Products__c cp:[select id, SVMXC__End_Date__c,SVMXC__Exchange_Type__c,Golden_Asset_Id__c,IncludedService__c,IncludedServiceFeatureName__c,InstallAt__c,
-                                                                SVMXC__Installed_Product__c,SVMXC__Installed_Product__r.name,InstalledProductLocation__c,SVMXC__Is_Billable__c,SVMXC__Line_Price__c,AssetLocation__c,BackOfficeReference__c, SVMXC__Installed_Product__r.UniqueSEIdentification__c,                                                               SVMXC__Notes__c,SVMXC__Number_Of_PMs_Delivered__c,SVMXC__Product__c,ProductSKU__c,SVMXC__Product_Family__c,SVMXC__Product_Line__c,SVMXC__Installed_Product__r.SchneiderCommercialReference__c,SVMXC__Installed_Product__r.SVMXC__Company__r.StreetLocalLang__c,SVMXC__Installed_Product__r.SVMXC__Company__r.AdditionalAddress__c,SVMXC__Installed_Product__r.SVMXC__Company__r.LocalAdditionalAddress__c,                                                                Serial_LotNumber__c,Serial_Number__c,SVMXC__Service_Contract__c,SVMXC__SLA_Terms__c,SVMXC__Start_Date__c,Tech_CreatedThroughSFM__c,SVMXC__Installed_Product__r.SVMXC__Warranty_Start_Date__c,SVMXC__Installed_Product__r.SVMXC__Warranty_End_Date__c,                                                            SVMXC__Installed_Product__r.GoldenAssetId__c,SVMXC__Installed_Product__r.SVMXC__Company__r.Name,SVMXC__Installed_Product__r.SVMXC__Company__r.SEAccountID__c,                                                              SVMXC__Installed_Product__r.SVMXC__Company__r.AccountLocalName__c,SVMXC__Installed_Product__r.SVMXC__Company__r.Street__c,                                                                SVMXC__Installed_Product__r.SVMXC__Company__r.City__c,SVMXC__Installed_Product__r.SVMXC__Company__r.StateProvince__r.StateProvinceCode__c,                                                                SVMXC__Installed_Product__r.SVMXC__Company__r.ZipCode__c,SVMXC__Installed_Product__r.SVMXC__Company__r.LocalCity__c,                                                                SVMXC__Installed_Product__r.SVMXC__Company__r.LocalCounty__c,SVMXC__Installed_Product__r.SVMXC__Company__r.Country__r.CountryCode__c,                                                                SVMXC__Installed_Product__r.SVMXC__Serial_Lot_Number__c,Tech_SetOfId__c,SVMXC__Service_Contract__r.BackOfficeReference__c from SVMXC__Service_Contract_Products__c where SVMXC__Service_Contract__c in : slidset ]){
+                                                                SVMXC__Installed_Product__c,SVMXC__Installed_Product__r.name,InstalledProductLocation__c,SVMXC__Is_Billable__c,SVMXC__Line_Price__c,AssetLocation__c,BackOfficeReference__c, SVMXC__Installed_Product__r.UniqueSEIdentification__c,                                                               SVMXC__Notes__c,SVMXC__Number_Of_PMs_Delivered__c,SVMXC__Product__c,ProductSKU__c,SVMXC__Product_Family__c,SVMXC__Product_Line__c,SVMXC__Installed_Product__r.SchneiderCommercialReference__c,SVMXC__Installed_Product__r.SVMXC__Company__r.StreetLocalLang__c,SVMXC__Installed_Product__r.SVMXC__Company__r.AdditionalAddress__c,SVMXC__Installed_Product__r.SVMXC__Company__r.LocalAdditionalAddress__c,                                                                Serial_LotNumber__c,Serial_Number__c,SVMXC__Service_Contract__c,SVMXC__SLA_Terms__c,SVMXC__Start_Date__c,Tech_CreatedThroughSFM__c,SVMXC__Installed_Product__r.SVMXC__Warranty_Start_Date__c,SVMXC__Installed_Product__r.SVMXC__Warranty_End_Date__c,                                                            SVMXC__Installed_Product__r.GoldenAssetId__c,SVMXC__Installed_Product__r.SVMXC__Company__r.Name,SVMXC__Installed_Product__r.SVMXC__Company__r.SEAccountID__c,                                                              SVMXC__Installed_Product__r.SVMXC__Company__r.AccountLocalName__c,SVMXC__Installed_Product__r.SVMXC__Company__r.Street__c,                                                                SVMXC__Installed_Product__r.SVMXC__Company__r.City__c,SVMXC__Installed_Product__r.SVMXC__Company__r.StateProvince__r.StateProvinceCode__c,                                                                SVMXC__Installed_Product__r.SVMXC__Company__r.ZipCode__c,SVMXC__Installed_Product__r.SVMXC__Company__r.LocalCity__c,                                                                SVMXC__Installed_Product__r.SVMXC__Company__r.LocalCounty__c,SVMXC__Installed_Product__r.SVMXC__Company__r.Country__r.CountryCode__c,                                                                SVMXC__Installed_Product__r.SVMXC__Serial_Lot_Number__c,Tech_SetOfId__c,SVMXC__Service_Contract__r.BackOfficeReference__c,ShippedSerialNumber__c from SVMXC__Service_Contract_Products__c where SVMXC__Service_Contract__c in : slidset ]){
                         
                         if(slidcpListMap.containskey(cp.SVMXC__Service_Contract__c))
                         {
